display media info as tooltip in playlist-view