@@ -28,6 +28,8 @@ import java.io.IOException;
 import java.net.URI;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import javax.sound.sampled.AudioFileFormat;
 import javax.sound.sampled.AudioFormat;
@@ -39,7 +41,7 @@ import lombok.NoArgsConstructor;
 import org.tritonus.share.sampled.file.TAudioFileFormat;
 
 /**
- *
+ * 
  * @author: Philipp Eichhorn
  */
 @NoArgsConstructor()
@@ -162,12 +164,23 @@ public class PlaylistItemTagFactory {
 				}
 				currentValue = props.get("mp3.id3tag.genre");
 				if (currentValue != null) {
-					builder.genre((String) currentValue);
+					final StringBuilder genre = new StringBuilder();
+					final Pattern pattern = Pattern.compile("[^()]+");
+					final Matcher matcher = pattern.matcher((String) currentValue);
+					while (matcher.find()) {
+						final String id3tagGenre = matcher.group();
+						try {
+							genre.append(ID3TAG_GENRES[Integer.valueOf(id3tagGenre)]);
+						} catch (NumberFormatException e) {
+							genre.append(id3tagGenre);
+						}
+					}
+					builder.genre(genre.toString());
 				}
 				currentValue = props.get("mp3.id3tag.track");
 				if (currentValue != null) {
 					try {
-						builder.track(new Integer((String) currentValue));
+						builder.track(Integer.valueOf((String) currentValue));
 					} catch (NumberFormatException ignore) {
 					}
 				}
@@ -190,4 +203,20 @@ public class PlaylistItemTagFactory {
 	private static interface IPlaylistItemTagBuilder {
 		public PlaylistItemTag fromAudioFileFormat(final AudioFileFormat aff);
 	}
+
+	// http://www.id3.org/id3v2.3.0#head-129376727ebe5309c1de1888987d070288d7c7e7
+	private final static String[] ID3TAG_GENRES = new String[] { "Blues", "Classic Rock", "Country", "Dance", "Disco", "Funk", "Grunge", "Hip-Hop", "Jazz", "Metal", "New Age",
+		"Oldies", "Other", "Pop", "R&B", "Rap", "Reggae", "Rock", "Techno", "Industrial", "Alternative", "Ska", "Death Metal", "Pranks", "Soundtrack", "Euro-Techno",
+		"Ambient", "Trip-Hop", "Vocal", "Jazz+Funk", "Fusion", "Trance", "Classical", "Instrumental", "Acid", "House", "Game", "Sound Clip", "Gospel", "Noise", "AlternRock",
+		"Bass", "Soul", "Punk", "Space", "Meditative", "Instrumental Pop", "Instrumental Rock", "Ethnic", "Gothic", "Darkwave", "Techno-Industrial", "Electronic", "Pop-Folk",
+		"Eurodance", "Dream", "Southern Rock", "Comedy", "Cult", "Gangsta", "Top 40", "Christian Rap", "Pop/Funk", "Jungle", "Native American", "Cabaret", "New Wave",
+		"Psychadelic", "Rave", "Showtunes", "Trailer", "Lo-Fi", "Tribal", "Acid Punk", "Acid Jazz", "Polka", "Retro", "Musical", "Rock & Roll", "Hard Rock",
+		// These were made up by the authors of Winamp but backported into the ID3 spec
+		"Folk", "Folk-Rock", "National Folk", "Swing", "Fast Fusion", "Bebob", "Latin", "Revival", "Celtic", "Bluegrass", "Avantgarde", "Gothic Rock", "Progressive Rock",
+		"Psychedelic Rock", "Symphonic Rock", "Slow Rock", "Big Band", "Chorus", "Easy Listening", "Acoustic", "Humour", "Speech", "Chanson", "Opera", "Chamber Music",
+		"Sonata", "Symphony", "Booty Bass", "Primus", "Porn Groove", "Satire", "Slow Jam", "Club", "Tango", "Samba", "Folklore", "Ballad", "Power Ballad", "Rhythmic Soul",
+		"Freestyle", "Duet", "Punk Rock", "Drum Solo", "A capella", "Euro-House", "Dance Hall",
+		// These were also invented by the Winamp folks but ignored by the ID3 authors.
+		"Goa", "Drum & Bass", "Club-House", "Hardcore", "Terror", "Indie", "BritPop", "Negerpunk", "Polsk Punk", "Beat", "Christian Gangsta Rap", "Heavy Metal", "Black Metal",
+		"Crossover", "Contemporary Christian", "Christian Rock", "Merengue", "Salsa", "Thrash Metal", "Anime", "Jpop", "Synthpop" };
 }
